Nav: fix edge of Download link being visible and clickable without opening menu in mobile view

--- a/static/static/css/blog.css
+++ b/static/static/css/blog.css
@@ -43,9 +43,6 @@ hr {
 ul, ol, dl {
   font-size: 1.1rem;
 }
-.top-bar {
-  height: 50px;
-}
 .top-bar, .top-bar-section { display: inline-block; }
 .top-bar .name h1 a {
   color: rgb(200, 200, 200);
